docs/apache-airflow-providers-google/14.0.0/_sources/_api/airflow/providers/google/cloud/links/bigquery/index.rst.txt
airflow.providers.google.cloud.links.bigquery
=============================================

.. py:module:: airflow.providers.google.cloud.links.bigquery

.. autoapi-nested-parse::

   This module contains Google BigQuery links.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.bigquery.BIGQUERY_BASE_LINK
   airflow.providers.google.cloud.links.bigquery.BIGQUERY_DATASET_LINK
   airflow.providers.google.cloud.links.bigquery.BIGQUERY_TABLE_LINK
   airflow.providers.google.cloud.links.bigquery.BIGQUERY_JOB_DETAIL_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.bigquery.BigQueryDatasetLink
   airflow.providers.google.cloud.links.bigquery.BigQueryTableLink
   airflow.providers.google.cloud.links.bigquery.BigQueryJobDetailLink


Module Contents
---------------

.. py:data:: BIGQUERY_BASE_LINK
   :value: '/bigquery'


.. py:data:: BIGQUERY_DATASET_LINK
   :value: '/bigquery?referrer=search&project={project_id}&d={dataset_id}&p={project_id}&page=dataset'


.. py:data:: BIGQUERY_TABLE_LINK
   :value: '/bigquery?referrer=search&project={project_id}&d={dataset_id}&p={project_id}&page=table&t={table_id}'


.. py:data:: BIGQUERY_JOB_DETAIL_LINK
   :value: '/bigquery?project={project_id}&ws=!1m5!1m4!1m3!1s{project_id}!2s{job_id}!3s{location}'


.. py:class:: BigQueryDatasetLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing BigQuery Dataset Link.


   .. py:attribute:: name
      :value: 'BigQuery Dataset'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'bigquery_dataset'



   .. py:attribute:: format_str
      :value: '/bigquery?referrer=search&project={project_id}&d={dataset_id}&p={project_id}&page=dataset'



   .. py:method:: persist(context, task_instance, dataset_id, project_id)
      :staticmethod:



.. py:class:: BigQueryTableLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing BigQuery Table Link.


   .. py:attribute:: name
      :value: 'BigQuery Table'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'bigquery_table'



   .. py:attribute:: format_str
      :value: '/bigquery?referrer=search&project={project_id}&d={dataset_id}&p={project_id}&page=table&t={table_id}'



   .. py:method:: persist(context, task_instance, project_id, table_id, dataset_id = None)
      :staticmethod:



.. py:class:: BigQueryJobDetailLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing BigQuery Job Detail Link.


   .. py:attribute:: name
      :value: 'BigQuery Job Detail'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'bigquery_job_detail'



   .. py:attribute:: format_str
      :value: '/bigquery?project={project_id}&ws=!1m5!1m4!1m3!1s{project_id}!2s{job_id}!3s{location}'



   .. py:method:: persist(context, task_instance, project_id, location, job_id)
      :staticmethod:



